updated notebook with baseline score

--- a/notebooks/sam_feature_selection.ipynb
+++ b/notebooks/sam_feature_selection.ipynb
@@ -2079,8 +2079,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "31dd8944-2b4a-4963-935c-b97cf2ec199b",
+   "execution_count": 76,
+   "id": "37058e37-bcb3-44b8-855e-47fc7a37ccb4",
    "metadata": {},
    "outputs": [
     {
@@ -2111,33 +2111,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4324343</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28169346</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>False</td>\n",
+       "      <th>28600044</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18078508</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23669089</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
+       "      <th>18366333</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14530840</th>\n",
-       "      <td>0.0</td>\n",
+       "      <th>18664406</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29138381</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6254949</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2147,64 +2147,85 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>491263</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12325960</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>False</td>\n",
+       "      <th>14465610</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6762380</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21463275</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
+       "      <th>26214643</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12710949</th>\n",
-       "      <td>0.0</td>\n",
+       "      <th>14654551</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6421547</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18799556</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20435647 rows × 3 columns</p>\n",
+       "<p>543854 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          ArrDelayMinutes  Cancelled  Diverted\n",
-       "4324343               0.0      False     False\n",
-       "28169346              2.0      False     False\n",
-       "18078508              0.0      False     False\n",
-       "23669089              0.0      False     False\n",
-       "14530840              0.0      False     False\n",
+       "28600044              NaN       True     False\n",
+       "18366333              NaN       True     False\n",
+       "18664406              NaN       True     False\n",
+       "29138381              NaN       True     False\n",
+       "6254949               NaN       True     False\n",
        "...                   ...        ...       ...\n",
-       "491263                0.0      False     False\n",
-       "12325960              3.0      False     False\n",
-       "6762380               0.0      False     False\n",
-       "21463275              0.0      False     False\n",
-       "12710949              0.0      False     False\n",
+       "14465610              NaN       True     False\n",
+       "26214643              NaN       True     False\n",
+       "14654551              NaN       True     False\n",
+       "6421547               NaN       True     False\n",
+       "18799556              NaN       True     False\n",
        "\n",
-       "[20435647 rows x 3 columns]"
+       "[543854 rows x 3 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train"
+    "y_train.loc[y_train['Cancelled']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "31dd8944-2b4a-4963-935c-b97cf2ec199b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.81964787837367"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.ArrDelayMinutes.mean()"
    ]
   },
   {
@@ -2266,6 +2287,276 @@
    "source": [
     "y_train[:10000].to_csv('../raw_data/initial_y_train.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb2c8573-ef5b-46f2-a9ab-7b7769550b53",
+   "metadata": {},
+   "source": [
+    "# Baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "39d89a62-3bb1-41c2-80dd-fb8da77684cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['FlightDate', 'Year', 'Quarter', 'Month', 'DayofMonth', 'DayOfWeek',\n",
+       "       'Airline', 'Operating_Airline', 'Marketing_Airline_Network',\n",
+       "       'Flight_Number_Marketing_Airline', 'Origin', 'Dest', 'CRSDepTime',\n",
+       "       'OriginAirportID', 'OriginCityName', 'OriginStateName', 'DestAirportID',\n",
+       "       'DestCityName', 'DestStateName', 'CRSArrTime', 'Distance'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "54986a04-623d-43b8-8845-96f29271f572",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArrDelayMinutes</th>\n",
+       "      <th>Cancelled</th>\n",
+       "      <th>Diverted</th>\n",
+       "      <th>DelayGroup</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4324343</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OnTime_Early</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28169346</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Small_Delay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18078508</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OnTime_Early</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23669089</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OnTime_Early</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14530840</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OnTime_Early</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>491263</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OnTime_Early</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12325960</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Small_Delay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6762380</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OnTime_Early</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21463275</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OnTime_Early</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12710949</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OnTime_Early</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20435647 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ArrDelayMinutes  Cancelled  Diverted    DelayGroup\n",
+       "4324343               0.0      False     False  OnTime_Early\n",
+       "28169346              2.0      False     False   Small_Delay\n",
+       "18078508              0.0      False     False  OnTime_Early\n",
+       "23669089              0.0      False     False  OnTime_Early\n",
+       "14530840              0.0      False     False  OnTime_Early\n",
+       "...                   ...        ...       ...           ...\n",
+       "491263                0.0      False     False  OnTime_Early\n",
+       "12325960              3.0      False     False   Small_Delay\n",
+       "6762380               0.0      False     False  OnTime_Early\n",
+       "21463275              0.0      False     False  OnTime_Early\n",
+       "12710949              0.0      False     False  OnTime_Early\n",
+       "\n",
+       "[20435647 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "1beb5ac1-9e47-474a-845b-1304b4a50c06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.81964787837367"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_delay_mean = y_train.ArrDelayMinutes.mean()\n",
+    "arr_delay_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "d7ec33bd-3d97-4e2d-a3a3-d265538b9a1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train[\"DelayGroup\"] = None\n",
+    "\n",
+    "y_train.loc[y_train[\"ArrDelayMinutes\"] == 0, \"DelayGroup\"] = \"OnTime_Early\"\n",
+    "y_train.loc[(y_train[\"ArrDelayMinutes\"] > 0) & (y_train[\"ArrDelayMinutes\"] <= 30), \"DelayGroup\"] = \"Small_Delay\"\n",
+    "y_train.loc[y_train[\"ArrDelayMinutes\"] > 30, \"DelayGroup\"] = \"Large_Delay\"\n",
+    "\n",
+    "y_train.loc[y_train[\"Cancelled\"], \"DelayGroup\"] = \"NoArrival\"\n",
+    "y_train.loc[y_train[\"Diverted\"], \"DelayGroup\"] = \"NoArrival\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "3fe0b7e3-2d73-4b6d-b9f1-8e61df9f7bb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OnTime_Early    13339768\n",
+       "Small_Delay      4336965\n",
+       "Large_Delay      2166865\n",
+       "NoArrival         591652\n",
+       "Name: DelayGroup, dtype: int64"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_counts = y_train.DelayGroup.value_counts()\n",
+    "cat_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "d73c963c-8039-4a36-a8bb-76cf05a5a5ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6527822267894936"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_counts['OnTime_Early'] / cat_counts.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cec919a0-2154-452e-8bd7-43a17fc73985",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
