added keyword args where necessary and docstrings

--- a/notebooks/sam_flightaware_api.ipynb
+++ b/notebooks/sam_flightaware_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 313,
    "id": "3a09c240-f96d-457f-8502-62357cc398b2",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 314,
    "id": "4efe4bd7-a08e-4563-8954-fe86780aeeba",
    "metadata": {},
    "outputs": [],
@@ -136,20 +136,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 315,
    "id": "6589e9c8-a48b-44f5-8bab-5d3c98dd0043",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bad API response\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'ident': 'UAL4',\n",
+       "  'ident_icao': 'UAL4',\n",
+       "  'ident_iata': 'UA4',\n",
+       "  'fa_flight_id': 'UAL4-1668924917-fa-0012',\n",
+       "  'operator': 'UAL',\n",
+       "  'operator_icao': 'UAL',\n",
+       "  'operator_iata': 'UA',\n",
+       "  'flight_number': '4',\n",
+       "  'registration': 'N45956',\n",
+       "  'atc_ident': None,\n",
+       "  'inbound_fa_flight_id': 'UAL923-1668869345-fa-0000',\n",
+       "  'codeshares': ['ACA5931', 'AUA7813', 'BEL9080', 'DLH7621', 'SWR3038'],\n",
+       "  'codeshares_iata': ['AC5931', 'OS7813', 'SN9080', 'LH7621', 'LX3038'],\n",
+       "  'blocked': False,\n",
+       "  'diverted': False,\n",
+       "  'cancelled': False,\n",
+       "  'position_only': False,\n",
+       "  'origin': {'code': 'EGLL',\n",
+       "   'code_icao': 'EGLL',\n",
+       "   'code_iata': 'LHR',\n",
+       "   'code_lid': None,\n",
+       "   'timezone': 'Europe/London',\n",
+       "   'name': 'London Heathrow',\n",
+       "   'city': 'London',\n",
+       "   'airport_info_url': '/airports/EGLL'},\n",
+       "  'destination': {'code': 'KIAH',\n",
+       "   'code_icao': 'KIAH',\n",
+       "   'code_iata': 'IAH',\n",
+       "   'code_lid': 'IAH',\n",
+       "   'timezone': 'America/Chicago',\n",
+       "   'name': \"Houston Bush Int'ctl\",\n",
+       "   'city': 'Houston',\n",
+       "   'airport_info_url': '/airports/KIAH'},\n",
+       "  'departure_delay': 120,\n",
+       "  'arrival_delay': -1140,\n",
+       "  'filed_ete': 37020,\n",
+       "  'foresight_predictions_available': True,\n",
+       "  'scheduled_out': '2022-11-22T13:45:00Z',\n",
+       "  'estimated_out': '2022-11-22T13:45:00Z',\n",
+       "  'actual_out': '2022-11-22T13:47:00Z',\n",
+       "  'scheduled_off': '2022-11-22T13:55:00Z',\n",
+       "  'estimated_off': '2022-11-22T14:05:58Z',\n",
+       "  'actual_off': '2022-11-22T14:05:58Z',\n",
+       "  'scheduled_on': '2022-11-23T00:12:00Z',\n",
+       "  'estimated_on': '2022-11-22T23:40:56Z',\n",
+       "  'actual_on': None,\n",
+       "  'scheduled_in': '2022-11-23T00:15:00Z',\n",
+       "  'estimated_in': '2022-11-22T23:56:00Z',\n",
+       "  'actual_in': None,\n",
+       "  'progress_percent': 39,\n",
+       "  'status': 'On The Way! / On Time',\n",
+       "  'aircraft_type': 'B789',\n",
+       "  'route_distance': 4829,\n",
+       "  'filed_airspeed': 460,\n",
+       "  'filed_altitude': 360,\n",
+       "  'route': '4900N/08000W SSM STL J101 LIT J180 SWB GESNR1',\n",
+       "  'baggage_claim': 'F6',\n",
+       "  'seats_cabin_business': 21,\n",
+       "  'seats_cabin_coach': None,\n",
+       "  'seats_cabin_first': 48,\n",
+       "  'gate_origin': 'B46',\n",
+       "  'gate_destination': 'E5',\n",
+       "  'terminal_origin': '2',\n",
+       "  'terminal_destination': 'E',\n",
+       "  'type': 'Airline'}]"
+      ]
+     },
+     "execution_count": 315,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_raw_flight_details(flight_number, datetime.date(2022,11,20))"
+    "get_raw_flight_details(flight_number, datetime.date(2022,11,22))"
    ]
   },
   {
