tam_model_demo version 2

--- a/notebooks/tam_model_demo.ipynb
+++ b/notebooks/tam_model_demo.ipynb
@@ -2,37 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 1,
    "id": "c778b60a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "from delai.data.local_disk import get_pandas_chunk\n",
     "from delai.ml_logic.preprocessing import preprocess_X, preprocess_y\n",
+    "\n",
+    "from sklearn.metrics import classification_report, accuracy_score, recall_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import cross_validate\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from matplotlib import pyplot as plt\n",
     "from sklearn import datasets\n",
-    "from sklearn import tree"
+    "from sklearn import tree\n",
+    "\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddfe64a7",
+   "metadata": {},
+   "source": [
+    "## Import CSV & create X / y datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "id": "a56dd18d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_X = pd.read_csv('../raw_data/initial_X_train.csv')\n",
-    "df_y = pd.read_csv('../raw_data/initial_y_train.csv')"
+    "df_X = pd.read_csv('../raw_data/train_100k.csv')\n",
+    "df_y = pd.read_csv('../raw_data/train_100k.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
+   "id": "bce4f986",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_X = df_X.drop(columns=[\"ArrDelayMinutes\" , \"Cancelled\", \"Diverted\"], axis =1)\n",
+    "df_y = df_y.drop(df_y.iloc[:, 1:22],axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "4f97ef9f",
    "metadata": {},
    "outputs": [
@@ -84,7 +108,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4324343</td>\n",
-       "      <td>2018-07-20</td>\n",
+       "      <td>7/20/2018</td>\n",
        "      <td>2018</td>\n",
        "      <td>3</td>\n",
        "      <td>7</td>\n",
@@ -103,12 +127,12 @@
        "      <td>Dallas, TX</td>\n",
        "      <td>Texas</td>\n",
        "      <td>1640</td>\n",
-       "      <td>1067.0</td>\n",
+       "      <td>1067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>28169346</td>\n",
-       "      <td>2022-01-02</td>\n",
+       "      <td>1/2/2022</td>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -127,12 +151,12 @@
        "      <td>New Orleans, LA</td>\n",
        "      <td>Louisiana</td>\n",
        "      <td>2148</td>\n",
-       "      <td>488.0</td>\n",
+       "      <td>488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>18078508</td>\n",
-       "      <td>2020-02-11</td>\n",
+       "      <td>2/11/2020</td>\n",
        "      <td>2020</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -151,12 +175,12 @@
        "      <td>Norfolk, VA</td>\n",
        "      <td>Virginia</td>\n",
        "      <td>1245</td>\n",
-       "      <td>717.0</td>\n",
+       "      <td>717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>23669089</td>\n",
-       "      <td>2021-02-10</td>\n",
+       "      <td>2/10/2021</td>\n",
        "      <td>2021</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -175,12 +199,12 @@
        "      <td>Houston, TX</td>\n",
        "      <td>Texas</td>\n",
        "      <td>828</td>\n",
-       "      <td>787.0</td>\n",
+       "      <td>787</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>14530840</td>\n",
-       "      <td>2020-03-12</td>\n",
+       "      <td>3/12/2020</td>\n",
        "      <td>2020</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
@@ -199,7 +223,7 @@
        "      <td>Boston, MA</td>\n",
        "      <td>Massachusetts</td>\n",
        "      <td>1455</td>\n",
-       "      <td>399.0</td>\n",
+       "      <td>399</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -207,12 +231,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  FlightDate  Year  Quarter  Month  DayofMonth  DayOfWeek  \\\n",
-       "0     4324343  2018-07-20  2018        3      7          20          5   \n",
-       "1    28169346  2022-01-02  2022        1      1           2          7   \n",
-       "2    18078508  2020-02-11  2020        1      2          11          2   \n",
-       "3    23669089  2021-02-10  2021        1      2          10          3   \n",
-       "4    14530840  2020-03-12  2020        1      3          12          4   \n",
+       "   Unnamed: 0 FlightDate  Year  Quarter  Month  DayofMonth  DayOfWeek  \\\n",
+       "0     4324343  7/20/2018  2018        3      7          20          5   \n",
+       "1    28169346   1/2/2022  2022        1      1           2          7   \n",
+       "2    18078508  2/11/2020  2020        1      2          11          2   \n",
+       "3    23669089  2/10/2021  2021        1      2          10          3   \n",
+       "4    14530840  3/12/2020  2020        1      3          12          4   \n",
        "\n",
        "                       Airline Operating_Airline Marketing_Airline_Network  \\\n",
        "0       Southwest Airlines Co.                WN                        WN   \n",
@@ -229,16 +253,16 @@
        "4  ...   BOS       1324           11278  Washington, DC         Virginia   \n",
        "\n",
        "  DestAirportID     DestCityName  DestStateName CRSArrTime Distance  \n",
-       "0         11259       Dallas, TX          Texas       1640   1067.0  \n",
-       "1         13495  New Orleans, LA      Louisiana       2148    488.0  \n",
-       "2         13931      Norfolk, VA       Virginia       1245    717.0  \n",
-       "3         12266      Houston, TX          Texas        828    787.0  \n",
-       "4         10721       Boston, MA  Massachusetts       1455    399.0  \n",
+       "0         11259       Dallas, TX          Texas       1640     1067  \n",
+       "1         13495  New Orleans, LA      Louisiana       2148      488  \n",
+       "2         13931      Norfolk, VA       Virginia       1245      717  \n",
+       "3         12266      Houston, TX          Texas        828      787  \n",
+       "4         10721       Boston, MA  Massachusetts       1455      399  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,43 +273,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "e7f5d935",
-   "metadata": {},
+   "execution_count": 5,
+   "id": "eecbfa75",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ preprocess_X() done\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ArrDelayMinutes</th>\n",
+       "      <th>Cancelled</th>\n",
+       "      <th>Diverted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4324343</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28169346</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18078508</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23669089</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14530840</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  ArrDelayMinutes  Cancelled  Diverted\n",
+       "0     4324343              0.0      False     False\n",
+       "1    28169346              2.0      False     False\n",
+       "2    18078508              0.0      False     False\n",
+       "3    23669089              0.0      False     False\n",
+       "4    14530840              0.0      False     False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df_y.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "972416ff",
+   "metadata": {},
+   "source": [
+    "## Preprocess data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7f5d935",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X = preprocess_X(df_X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "21a24bbc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ preprocess_y() done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = preprocess_y(df_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "2fe301bd",
    "metadata": {},
    "outputs": [],
@@ -295,83 +404,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "426b77d1",
+   "metadata": {},
+   "source": [
+    "## t_t_s & inspect\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99867a03",
+   "metadata": {},
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,test_size=0.2, random_state = 1)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "4045ba17",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 699)"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "b22c709e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000,)"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y.shape"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6729e5e9",
+   "metadata": {},
+   "source": [
+    "## DecisionTreeClassifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": null,
    "id": "878f769e",
    "metadata": {},
    "outputs": [],
    "source": [
     "clf = DecisionTreeClassifier(max_depth=None, min_samples_leaf=250, random_state=None, splitter='best', min_samples_split=50)\n",
     "clf.fit(X,y)\n",
-    "score = cross_val_score(clf, X, y, scoring = 'accuracy', cv=5)\n"
+    "pred = clf.predict(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
+   "id": "8a721234",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = classification_report(y_test, pred)\n",
+    "print('Classification Report:',)\n",
+    "print (score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71aa4f98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_val_score(clf, X_train, y_train, scoring = 'accuracy', cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fa9a4bf5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0002000000000000224\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.6529"
-      ]
-     },
-     "execution_count": 271,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(score.std())\n",
     "score.mean()"
@@ -379,73 +494,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": null,
    "id": "d7ddbf81",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.08016878 0.02109705 0.55274262 0.34599156]\n",
-      " [0.11888112 0.06293706 0.61538462 0.2027972 ]\n",
-      " [0.06217617 0.0984456  0.67098446 0.16839378]\n",
-      " ...\n",
-      " [0.23703704 0.01111111 0.46666667 0.28518519]\n",
-      " [0.10431655 0.08992806 0.65827338 0.14748201]\n",
-      " [0.06217617 0.0984456  0.67098446 0.16839378]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(clf.predict_proba(X))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "id": "89952506",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 273,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.get_depth()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "id": "6c3aa856",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31"
-      ]
-     },
-     "execution_count": 274,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.get_n_leaves()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "id": "4d2f9989",
    "metadata": {},
    "outputs": [],
@@ -455,74 +534,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
    "id": "325ed091",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 2, 2, ..., 2, 2, 2])"
-      ]
-     },
-     "execution_count": 276,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.predict(X, check_input=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": null,
    "id": "b7ee758f",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.08016878, 0.02109705, 0.55274262, 0.34599156],\n",
-       "       [0.11888112, 0.06293706, 0.61538462, 0.2027972 ],\n",
-       "       [0.06217617, 0.0984456 , 0.67098446, 0.16839378],\n",
-       "       ...,\n",
-       "       [0.23703704, 0.01111111, 0.46666667, 0.28518519],\n",
-       "       [0.10431655, 0.08992806, 0.65827338, 0.14748201],\n",
-       "       [0.06217617, 0.0984456 , 0.67098446, 0.16839378]])"
-      ]
-     },
-     "execution_count": 277,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.predict_proba(X, check_input=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": null,
+   "id": "f0f8e317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivfl = data.pivot_table(index='Month', \n",
+    "                        columns='DayOfWeek', \n",
+    "                        values='Cancelled', aggfunc=np.median)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0f020c45",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'convert_to_graphviz' from 'sklearn.tree' (/home/tamara/.pyenv/versions/3.8.12/envs/delai/lib/python3.8/site-packages/sklearn/tree/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [288], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtree\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m convert_to_graphviz\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgraphviz\u001b[39;00m\n\u001b[1;32m      4\u001b[0m graphviz\u001b[38;5;241m.\u001b[39mSource(export_graphviz(tree))\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'convert_to_graphviz' from 'sklearn.tree' (/home/tamara/.pyenv/versions/3.8.12/envs/delai/lib/python3.8/site-packages/sklearn/tree/__init__.py)"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from sklearn.tree import convert_to_graphviz\n",
     "import graphviz\n",
@@ -532,24 +581,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": null,
    "id": "2fcb7190",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting graphviz\n",
-      "  Downloading graphviz-0.20.1-py3-none-any.whl (47 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m47.0/47.0 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: graphviz\n",
-      "Successfully installed graphviz-0.20.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install graphviz"
    ]
