--- a/notebooks/sam_model_demo.ipynb
+++ b/notebooks/sam_model_demo.ipynb
@@ -691,7 +691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('delai')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -707,7 +707,19 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
   },
-  "orig_nbformat": 4,
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
   "vscode": {
    "interpreter": {
     "hash": "0875b2852ba53d04eef81221e37e4b35e2d8d6d991ba847490f1cdc34d293f04"
