--- a/notebooks/sam_model_demo.ipynb
+++ b/notebooks/sam_model_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>FlightDate</th>\n",
        "      <th>Year</th>\n",
@@ -755,6 +754,7 @@
        "      <th>DayOfWeek</th>\n",
        "      <th>Airline</th>\n",
        "      <th>Operating_Airline</th>\n",
+       "      <th>Marketing_Airline_Network</th>\n",
        "      <th>...</th>\n",
        "      <th>OriginCityName</th>\n",
        "      <th>OriginStateName</th>\n",
@@ -771,7 +771,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>4324343</td>\n",
        "      <td>2018-07-20</td>\n",
        "      <td>2018</td>\n",
@@ -780,6 +779,7 @@
        "      <td>20</td>\n",
        "      <td>5</td>\n",
        "      <td>Southwest Airlines Co.</td>\n",
+       "      <td>WN</td>\n",
        "      <td>WN</td>\n",
        "      <td>...</td>\n",
        "      <td>Las Vegas, NV</td>\n",
@@ -795,7 +795,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>28169346</td>\n",
        "      <td>2022-01-02</td>\n",
        "      <td>2022</td>\n",
@@ -804,6 +803,7 @@
        "      <td>2</td>\n",
        "      <td>7</td>\n",
        "      <td>Spirit Air Lines</td>\n",
+       "      <td>NK</td>\n",
        "      <td>NK</td>\n",
        "      <td>...</td>\n",
        "      <td>Tampa, FL</td>\n",
@@ -819,7 +819,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>18078508</td>\n",
        "      <td>2020-02-11</td>\n",
        "      <td>2020</td>\n",
@@ -829,6 +828,7 @@
        "      <td>2</td>\n",
        "      <td>Air Wisconsin Airlines Corp</td>\n",
        "      <td>ZW</td>\n",
+       "      <td>UA</td>\n",
        "      <td>...</td>\n",
        "      <td>Chicago, IL</td>\n",
        "      <td>Illinois</td>\n",
@@ -843,7 +843,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>23669089</td>\n",
        "      <td>2021-02-10</td>\n",
        "      <td>2021</td>\n",
@@ -852,6 +851,7 @@
        "      <td>10</td>\n",
        "      <td>3</td>\n",
        "      <td>United Air Lines Inc.</td>\n",
+       "      <td>UA</td>\n",
        "      <td>UA</td>\n",
        "      <td>...</td>\n",
        "      <td>Tampa, FL</td>\n",
@@ -867,7 +867,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>14530840</td>\n",
        "      <td>2020-03-12</td>\n",
        "      <td>2020</td>\n",
@@ -876,6 +875,7 @@
        "      <td>12</td>\n",
        "      <td>4</td>\n",
        "      <td>JetBlue Airways</td>\n",
+       "      <td>B6</td>\n",
        "      <td>B6</td>\n",
        "      <td>...</td>\n",
        "      <td>Washington, DC</td>\n",
@@ -889,50 +889,231 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20435642</th>\n",
+       "      <td>491263</td>\n",
+       "      <td>2018-10-14</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Southwest Airlines Co.</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Oakland, CA</td>\n",
+       "      <td>California</td>\n",
+       "      <td>10423</td>\n",
+       "      <td>Austin, TX</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>1310</td>\n",
+       "      <td>1497.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20435643</th>\n",
+       "      <td>12325960</td>\n",
+       "      <td>2019-03-30</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Southwest Airlines Co.</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>St. Louis, MO</td>\n",
+       "      <td>Missouri</td>\n",
+       "      <td>11259</td>\n",
+       "      <td>Dallas, TX</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>1825</td>\n",
+       "      <td>546.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20435644</th>\n",
+       "      <td>6762380</td>\n",
+       "      <td>2019-02-04</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>American Airlines Inc.</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Houston, TX</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>11298</td>\n",
+       "      <td>Dallas/Fort Worth, TX</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>754</td>\n",
+       "      <td>224.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20435645</th>\n",
+       "      <td>21463275</td>\n",
+       "      <td>2021-09-08</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Republic Airlines</td>\n",
+       "      <td>YX</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Washington, DC</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>13303</td>\n",
+       "      <td>Miami, FL</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>1325</td>\n",
+       "      <td>921.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20435646</th>\n",
+       "      <td>12710949</td>\n",
+       "      <td>2019-11-10</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>SkyWest Airlines Inc.</td>\n",
+       "      <td>OO</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pasco/Kennewick/Richland, WA</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>12892</td>\n",
+       "      <td>Los Angeles, CA</td>\n",
+       "      <td>California</td>\n",
+       "      <td>1901</td>\n",
+       "      <td>851.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>20435647 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0.1  Unnamed: 0  FlightDate  Year  Quarter  Month  DayofMonth  \\\n",
-       "0             0     4324343  2018-07-20  2018        3      7          20   \n",
-       "1             1    28169346  2022-01-02  2022        1      1           2   \n",
-       "2             2    18078508  2020-02-11  2020        1      2          11   \n",
-       "3             3    23669089  2021-02-10  2021        1      2          10   \n",
-       "4             4    14530840  2020-03-12  2020        1      3          12   \n",
+       "          Unnamed: 0  FlightDate  Year  Quarter  Month  DayofMonth  DayOfWeek  \\\n",
+       "0            4324343  2018-07-20  2018        3      7          20          5   \n",
+       "1           28169346  2022-01-02  2022        1      1           2          7   \n",
+       "2           18078508  2020-02-11  2020        1      2          11          2   \n",
+       "3           23669089  2021-02-10  2021        1      2          10          3   \n",
+       "4           14530840  2020-03-12  2020        1      3          12          4   \n",
+       "...              ...         ...   ...      ...    ...         ...        ...   \n",
+       "20435642      491263  2018-10-14  2018        4     10          14          7   \n",
+       "20435643    12325960  2019-03-30  2019        1      3          30          6   \n",
+       "20435644     6762380  2019-02-04  2019        1      2           4          1   \n",
+       "20435645    21463275  2021-09-08  2021        3      9           8          3   \n",
+       "20435646    12710949  2019-11-10  2019        4     11          10          7   \n",
        "\n",
-       "   DayOfWeek                      Airline Operating_Airline  ...  \\\n",
-       "0          5       Southwest Airlines Co.                WN  ...   \n",
-       "1          7             Spirit Air Lines                NK  ...   \n",
-       "2          2  Air Wisconsin Airlines Corp                ZW  ...   \n",
-       "3          3        United Air Lines Inc.                UA  ...   \n",
-       "4          4              JetBlue Airways                B6  ...   \n",
+       "                              Airline Operating_Airline  \\\n",
+       "0              Southwest Airlines Co.                WN   \n",
+       "1                    Spirit Air Lines                NK   \n",
+       "2         Air Wisconsin Airlines Corp                ZW   \n",
+       "3               United Air Lines Inc.                UA   \n",
+       "4                     JetBlue Airways                B6   \n",
+       "...                               ...               ...   \n",
+       "20435642       Southwest Airlines Co.                WN   \n",
+       "20435643       Southwest Airlines Co.                WN   \n",
+       "20435644       American Airlines Inc.                AA   \n",
+       "20435645            Republic Airlines                YX   \n",
+       "20435646        SkyWest Airlines Inc.                OO   \n",
        "\n",
-       "   OriginCityName  OriginStateName DestAirportID     DestCityName  \\\n",
-       "0   Las Vegas, NV           Nevada         11259       Dallas, TX   \n",
-       "1       Tampa, FL          Florida         13495  New Orleans, LA   \n",
-       "2     Chicago, IL         Illinois         13931      Norfolk, VA   \n",
-       "3       Tampa, FL          Florida         12266      Houston, TX   \n",
-       "4  Washington, DC         Virginia         10721       Boston, MA   \n",
+       "         Marketing_Airline_Network  ...                OriginCityName  \\\n",
+       "0                               WN  ...                 Las Vegas, NV   \n",
+       "1                               NK  ...                     Tampa, FL   \n",
+       "2                               UA  ...                   Chicago, IL   \n",
+       "3                               UA  ...                     Tampa, FL   \n",
+       "4                               B6  ...                Washington, DC   \n",
+       "...                            ...  ...                           ...   \n",
+       "20435642                        WN  ...                   Oakland, CA   \n",
+       "20435643                        WN  ...                 St. Louis, MO   \n",
+       "20435644                        AA  ...                   Houston, TX   \n",
+       "20435645                        UA  ...                Washington, DC   \n",
+       "20435646                        UA  ...  Pasco/Kennewick/Richland, WA   \n",
        "\n",
-       "   DestStateName  CRSArrTime Distance ArrDelayMinutes  Cancelled Diverted  \n",
-       "0          Texas        1640   1067.0             0.0      False    False  \n",
-       "1      Louisiana        2148    488.0             2.0      False    False  \n",
-       "2       Virginia        1245    717.0             0.0      False    False  \n",
-       "3          Texas         828    787.0             0.0      False    False  \n",
-       "4  Massachusetts        1455    399.0             0.0      False    False  \n",
+       "         OriginStateName DestAirportID           DestCityName  DestStateName  \\\n",
+       "0                 Nevada         11259             Dallas, TX          Texas   \n",
+       "1                Florida         13495        New Orleans, LA      Louisiana   \n",
+       "2               Illinois         13931            Norfolk, VA       Virginia   \n",
+       "3                Florida         12266            Houston, TX          Texas   \n",
+       "4               Virginia         10721             Boston, MA  Massachusetts   \n",
+       "...                  ...           ...                    ...            ...   \n",
+       "20435642      California         10423             Austin, TX          Texas   \n",
+       "20435643        Missouri         11259             Dallas, TX          Texas   \n",
+       "20435644           Texas         11298  Dallas/Fort Worth, TX          Texas   \n",
+       "20435645        Virginia         13303              Miami, FL        Florida   \n",
+       "20435646      Washington         12892        Los Angeles, CA     California   \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "         CRSArrTime Distance  ArrDelayMinutes Cancelled Diverted  \n",
+       "0              1640   1067.0              0.0     False    False  \n",
+       "1              2148    488.0              2.0     False    False  \n",
+       "2              1245    717.0              0.0     False    False  \n",
+       "3               828    787.0              0.0     False    False  \n",
+       "4              1455    399.0              0.0     False    False  \n",
+       "...             ...      ...              ...       ...      ...  \n",
+       "20435642       1310   1497.0              0.0     False    False  \n",
+       "20435643       1825    546.0              3.0     False    False  \n",
+       "20435644        754    224.0              0.0     False    False  \n",
+       "20435645       1325    921.0              0.0     False    False  \n",
+       "20435646       1901    851.0              0.0     False    False  \n",
+       "\n",
+       "[20435647 rows x 25 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.head()"
+    "train"
    ]
   },
   {
