--- a/notebooks/M_M_preprocessing_notebook.ipynb
+++ b/notebooks/M_M_preprocessing_notebook.ipynb
@@ -2779,7 +2779,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('shims')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
