notebook and some logic for adding data with encoded values ready processed

--- a/notebooks/sam_data_splitting.ipynb
+++ b/notebooks/sam_data_splitting.ipynb
@@ -1729,7 +1729,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('shims')",
+   "display_name": "Python 3.8.12 64-bit ('delai')",
    "language": "python",
    "name": "python3"
   },
@@ -1748,7 +1748,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "135199c82697646d31fc87055e8c8044df91c5e93a634aef523137dc7a98a22f"
+    "hash": "0875b2852ba53d04eef81221e37e4b35e2d8d6d991ba847490f1cdc34d293f04"
    }
   }
  },
